[tool.poetry]
name = "python-nix-flake-generator"
version = "0.0.1-alpha.1"
description = ""
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "src/domain"}, {include = "src/infrastructure"}, {include = "src/application"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
packaging = "^21.3"
toml = "^0.10.2"
beautifulsoup4 = "^4.11.1"
mistune = "^2.0.4"

[tool.poetry.dev-dependencies]
grpcio = "^1.41.0"
grpcio-tools = "^1.41.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-grpc = "scripts.make_grpc:main"
